# Sark

./: AUTHORS.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish.yml
codecs/: README.rst  hex_bytes.py  proxy.py
docs/: Installation.rst  Introduction.rst  Makefile  Support.rst  conf.py  debugging.rst  index.rst  make.bat
docs/api/: Code-Blocks.rst  Enums.rst  Functions.rst  IDB-Graphs.rst  Instructions.rst  Lines.rst  Miscellaneous.rst  Switch.rst  UI.rst  Xrefs.rst  index.rst  segments.rst  tutorial-conventions.rst
docs/examples/: Capture-Huge-Screenshots.rst  Plotting-a-Call-Graph.rst  index.rst
docs/plugins/: autostruct.rst  index.rst  installation.rst  meaningful.rst  quick_copy.rst  xrefsgraph.rst
plugins/: README.rst  autoenum.py  autostruct.py  callgraph.py  function_flow.py  function_flow_66.py  function_strings.py  highlight_calls.py  idle_starter.py  ipython.py  lca.py  meaningful.py  plugin_loader.py  proxy.py  ptvsd_enable.py  quick_copy.py  requirements.txt  xrefsgraph.py
sark/: __init__.py  code.py  codeblock.py  codeblocks.py  core.py  data.py  debug.py  enum.py  exceptions.py  graph.py  ipython.py  plumbing.py  qt.py  sark.py  structure.py  ui.py
sark/code/: __init__.py  base.py  function.py  idapython_workaround.py  instruction.py  intel.py  line.py  segment.py  switch.py  xref.py
sark/codecs/: README.rst
sark/encodings/: README.rst  hex_bytes.py
sark/exceptions/: __init__.py  (+17 more)
tests/: README.rst  config.json  testhelper.py  tests.py
(+24 files in other folders)
