[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sark"
description = "IDA Scripting Library"
readme = "README.rst"
license = "MIT"
version = "9.0.0"
authors = [{ name = "Tamir Bahar", email = "" }]
dependencies = ["networkx >= 2.0.0", "wrapt"]

[project.optional-dependencies]
dev = ["keystone-engine == 0.9.2", "approvaltests >= 10.1.0"]

[project.urls]
Homepage = "https://github.com/tmr232/Sark"

[tool.hatch.build.targets.sdist]
include = ["/sark"]
